<resources>
    <string name="app_name">Pizza Bytes</string>


    <string-array name="array_pakistan_city">
        <item>Select Your City</item>
        <item>Lahore</item>
        <item>Karachi</item>
        <item>Islamabad</item>
        <item>Sailkot</item>
    </string-array>

    <string-array name="array_city_location">
        <item>Select Your Location</item>
    </string-array>

    <string-array name="array_city_Lahore_location">
        <item>Select Your Location</item>
        <item>Allama Iqbal Town</item>
        <item>PIA Road</item>
        <item>Johar Town</item>
        <item>Mazang Chungi</item>
    </string-array>

    <string-array name="array_city_Karachi_location">
        <item>Select Your Location</item>
        <item>Gulshan Bhar</item>
        <item>Goli Mar</item>
        <item>Kalifton</item>
    </string-array>

    <string-array name="array_city_Islamabad_location">
        <item>Select Your Location</item>
        <item>Bharia Town</item>
        <item>Defence Road</item>
        <item>FB Sector 17</item>
    </string-array>

    <string-array name="array_city_Sailkot_location">
        <item>Select Your Location</item>
        <item>Main Road</item>
        <item>Sailkot Road</item>
        <item>Ghari Chowk</item>
        <item>Ghanta Ghar</item>
    </string-array>

    <string name="facebook_app_id">1123657998442468</string>
    <string name="fb_login_protocol_scheme">fb1123657998442468</string>
    <string name="enter_your_email_and_password">Enter Your Email and Password.</string>
    <string name="forget_npassword">Forget\nPassword</string>
    <string name="provide_your_account_phone_number_nfor_which_you_want_to_nreset_password">Provide Your Account Phone Number\nfor which you want to\nreset password</string>
    <string name="phone_number">Phone Number</string>
    <string name="_03001234567">03001234567</string>
    <string name="next">NEXT</string>
    <string name="enter_your_email_password"><![CDATA[Enter Your Email & Password]]></string>
    <string name="best_pizza_in_the_town">Best Pizza in The Town</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="type_email_here">Type Email Here</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>


</resources>