<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    android:layout_height="wrap_content"
    tools:context="com.pizza.pizzabytes.ForgetActivity">

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="-15dp"
            android:src="@drawable/ic_baseline_arrow_back_24"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/lock"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:fontFamily="@font/arial"
            android:gravity="center"
            android:text="@string/forget_npassword"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="40sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/arial"
            android:gravity="center"
            android:text="@string/provide_your_account_phone_number_nfor_which_you_want_to_nreset_password"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="16sp"
            android:fontFamily="@font/arial"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/forgetemail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:paddingStart="15dp"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="25dp"
            android:background="@drawable/box"
            android:backgroundTint="#DAD8D8"
            android:ems="10"
            android:fontFamily="@font/arial"
            android:textSize="18sp"
            android:gravity="center_horizontal|left|center_vertical"
            android:hint="@string/_03001234567"
            android:inputType="number"
            tools:ignore="RtlHardcoded,TextFields" />

        <Button
            android:id="@+id/forgetnext"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/vie_bg"
            android:fontFamily="monospace"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>